--- a/css/style.css
+++ b/css/style.css
@@ -273,10 +273,7 @@ main {
     border-radius: 3px;
 }
 
-
-
-
-.elementoBusqueda {
+/* .elementoBusqueda {
     display: flex;
     justify-content: space-around;
     position: fixed;
@@ -285,10 +282,54 @@ main {
     z-index: 1001;
     background-color: white;
 }
-
 .elementoBusqueda span {
     font-size: 20px;
     color: red;
+} */
+
+.elementoBusqueda {
+    display: flex;
+    justify-content: start;
+    position: fixed;
+    top: 105px;
+    width: 100%;
+    z-index: 1001;
+    background-color: white;
+}
+
+.elementoBusqueda>article {
+    display: flex;
+    justify-content: center;
+    height: 60px;
+
+}
+
+.elementoBusqueda>article>img {
+    margin-right: 20px;
+}
+
+.elementoBusqueda>article>input {
+/*     border: 0; */
+    outline: none;
+    border:0;
+    border-bottom: 1px solid maroon;
+    font-size: 20px
+}
+
+.elementoBusqueda>article>input::focus {
+    border: 0;
+        outline: none;
+
+    border-bottom: 1px solid maroon;
+}
+
+.elementoBusqueda span {
+    font-size: 20px;
+    color: maroon;
+}
+
+#nClientes, #nMaquinas{
+    font-size: 24px;
 }
 
 
@@ -312,7 +353,7 @@ main {
     background-color: rgb(239, 222, 222);
 
     position: fixed;
-    top: 150px;
+    top: 165px;
     width: 98%;
     z-index: 1002;
 }
@@ -324,7 +365,7 @@ main {
     height: 50%;
     margin: auto;
     overflow: auto;
-    margin-top: 50px;
+    margin-top: 70px;
     z-index: 999;
 }
 
@@ -1298,7 +1339,7 @@ article.recycled {
 
     /*     position: fixed; */
     /*     top: 180px; */
-    margin-top: 50px;
+    margin-top: 60px;
     /*     width: 98%; */
     z-index: 999;
 }
