--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,7 @@ main {
     display: none;
     position: absolute;
     top: 70%;
-    left: 20;
+    /* left: 20; */
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
@@ -316,7 +316,7 @@ main {
     font-size: 20px
 }
 
-.elementoBusqueda>article>input::focus {
+.elementoBusqueda>article>input:focus {
     border: 0;
         outline: none;
 
