Añadida Acerca de...

--- a/css/style.css
+++ b/css/style.css
@@ -1576,6 +1576,52 @@ article.recycled {
     background-color: lightyellow;
 }
 
+.infoViewAcerca {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 5px;
+    width: 70%;
+    margin: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border: 1px solid grey;
+    padding: 3px;
+
+}
+
+.infoViewAcerca>.grupoInfo {
+    display: flex;
+    padding: 3px;
+    max-width: 100%;
+}
+
+.infoViewAcerca>.grupoInfo>label {
+    border: 1px solid darkgray;
+    border-radius: 3px;
+    font-size: 0.8em;
+    background-color: rgb(239, 222, 222);
+    width: 200px;
+}
+
+.infoViewAcerca>.grupoInfo>.entradaValor2 {
+    border: 1px solid darkgray;
+    margin-left: 15px;
+    width:100%
+
+}
+
+.infoViewAcerca>.grupoImagen{
+    margin:20px;
+    border:none;
+}
+.infoViewAcerca>.grupoImagen>img{
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    max-width: 250px
+ 
+}
+
+
 /************************** UNICODE ************************************/
 
 /*
